# Horcrux

./: .gitignore  README.MD
src/: CMakeLists.txt  main.cpp
src/classes/: cipher.cpp  file_manager.cpp  horcrux.cpp
src/include/: cipher.h  file_manager.h  horcrux.h
src/include/openssl/: opensslconf.h
src/lib/: libcrypto.lib  libssl.lib
